<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.InputFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/choice_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock" />

        <RadioButton
            android:id="@+id/paper_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper" />

        <RadioButton
            android:id="@+id/scissor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scissor" />
    </RadioGroup>

    <Button
        android:id="@+id/play_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap2"
        android:text="@string/play" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>