<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.OutputFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/player_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap0"
        android:text="@string/player_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/bot_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_choice"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <TextView
        android:id="@+id/Results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/results_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp" />

    <Button
        android:id="@+id/back_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap2"
        android:text="@string/play_again" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

</LinearLayout>